--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitrina",
-  "home": "https://iskanderqq.github.io/React-shop",
+  "homepage": "https://iskanderqq.github.io/React-shop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
